[tool.poetry]
name = "python-algorithm"
version = "1.0.0"
description = "Algorithm examples for Python"
authors = ["Jinseong Ha"]
license = "Apache-2.0"
repository = "https://github.com/codejsha/algorithm-examples"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.25.2"
scipy = "^1.11.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-benchmark = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
