[tool.poetry]
name = "algorithm"
version = "1.0.0"
description = "Algorithm examples for Python"
authors = ["Jinseong Ha"]
license = "Apache-2.0"
repository = "https://github.com/codejsha/algorithm-examples"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.0.0"
scipy = "^1.14.0"
networkx = "^3.3"
matplotlib = "^3.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
