add_subdirectory(array)
add_subdirectory(dynamic_programming)
# if(MSVC)
#     add_subdirectory(graph)
# endif()
# add_subdirectory(greedy)
# add_subdirectory(hash_table)
# add_subdirectory(heap)
add_subdirectory(linked_list)
# add_subdirectory(math)
add_subdirectory(primitive_type)
# add_subdirectory(queue)
# add_subdirectory(sort)
add_subdirectory(stack)
add_subdirectory(string)
add_subdirectory(tree)
