add_subdirectory(array)
add_subdirectory(array/test)
add_subdirectory(array/benchmark)
add_subdirectory(dynamic_programming)
add_subdirectory(dynamic_programming/test)
add_subdirectory(dynamic_programming/benchmark)
if(MSVC)
    add_subdirectory(graph)
    add_subdirectory(graph/test)
endif()
add_subdirectory(greedy)
add_subdirectory(greedy/test)
add_subdirectory(hash_table)
add_subdirectory(hash_table/test)
add_subdirectory(heap)
add_subdirectory(heap/test)
add_subdirectory(heap/benchmark)
add_subdirectory(include)
add_subdirectory(linked_list)
add_subdirectory(linked_list/test)
add_subdirectory(linked_list/benchmark)
add_subdirectory(math)
add_subdirectory(math/test)
add_subdirectory(primitive_type)
add_subdirectory(primitive_type/test)
add_subdirectory(primitive_type/benchmark)
add_subdirectory(queue)
add_subdirectory(queue/test)
add_subdirectory(search)
add_subdirectory(search/test)
add_subdirectory(sort)
add_subdirectory(sort/test)
add_subdirectory(stack)
add_subdirectory(stack/test)
add_subdirectory(stack/benchmark)
add_subdirectory(string)
add_subdirectory(string/test)
add_subdirectory(string/benchmark)
add_subdirectory(tree)
add_subdirectory(tree/test)
add_subdirectory(tree/benchmark)
