add_subdirectory(array)
add_subdirectory(array/test)
add_subdirectory(array/benchmark)
add_subdirectory(dp)
add_subdirectory(dp/test)
add_subdirectory(dp/benchmark)
if(MSVC)
    add_subdirectory(graph)
    add_subdirectory(graph/test)
endif()
add_subdirectory(greedy)
add_subdirectory(greedy/test)
add_subdirectory(hashtable)
add_subdirectory(hashtable/test)
add_subdirectory(heap)
add_subdirectory(heap/test)
add_subdirectory(heap/benchmark)
add_subdirectory(include)
add_subdirectory(linkedlist)
add_subdirectory(linkedlist/test)
add_subdirectory(linkedlist/benchmark)
add_subdirectory(math)
add_subdirectory(math/test)
add_subdirectory(primitive)
add_subdirectory(primitive/test)
add_subdirectory(primitive/benchmark)
add_subdirectory(queue)
add_subdirectory(queue/test)
add_subdirectory(search)
add_subdirectory(search/test)
add_subdirectory(sort)
add_subdirectory(sort/test)
add_subdirectory(stack)
add_subdirectory(stack/test)
add_subdirectory(stack/benchmark)
add_subdirectory(string)
add_subdirectory(string/test)
add_subdirectory(string/benchmark)
add_subdirectory(tree)
add_subdirectory(tree/test)
add_subdirectory(tree/benchmark)
