add_subdirectory(array)
add_subdirectory(array/benchmark)
add_subdirectory(dynamic_programming)
add_subdirectory(dynamic_programming/benchmark)
if(MSVC)
    add_subdirectory(graph)
endif()
add_subdirectory(greedy)
# add_subdirectory(hash_table)
add_subdirectory(heap)
add_subdirectory(heap/benchmark)
add_subdirectory(linked_list)
add_subdirectory(linked_list/benchmark)
add_subdirectory(math)
add_subdirectory(primitive_type)
add_subdirectory(primitive_type/benchmark)
add_subdirectory(queue)
add_subdirectory(search)
add_subdirectory(sort)
add_subdirectory(stack)
add_subdirectory(stack/benchmark)
add_subdirectory(string)
add_subdirectory(string/benchmark)
add_subdirectory(tree)
add_subdirectory(tree/benchmark)
