find_package(benchmark REQUIRED)

include_directories(${CMAKE_SOURCE_DIR}/src/include)
include_directories(${CMAKE_SOURCE_DIR}/src/array)

macro(add_target_benchmark target)
    string(REPLACE "_benchmark" "" target_name ${target})
    add_executable(${target} "${target}.cpp" "${CMAKE_SOURCE_DIR}/src/array/${target_name}.cpp")
    target_link_libraries(${target} PRIVATE benchmark::benchmark benchmark::benchmark_main ${ARGN})
    target_compile_definitions(${target} PUBLIC -DBENCHMARK_STATIC_DEFINE)
    if(MSVC)
        ### Edit and Continue for CMake projects
        target_compile_options(${target} PUBLIC "/Zi")
        target_link_options(${target} PUBLIC "/INCREMENTAL")
    endif()
endmacro()

add_target_benchmark(advancing_through_benchmark)
add_target_benchmark(arbitrary_precision_integer_benchmark)
add_target_benchmark(delete_element_benchmark)
# add_target_benchmark(dutch_national_flag_benchmark)
add_target_benchmark(enumerate_prime_number_benchmark)
# add_target_benchmark(order_element_benchmark)
add_target_benchmark(random_data_sampling_benchmark)
add_target_benchmark(replace_element_benchmark)
add_target_benchmark(trade_stock_benchmark)
