find_package(fmt REQUIRED)
find_package(benchmark REQUIRED)

include_directories(${CMAKE_SOURCE_DIR}/src/include)
include_directories(${CMAKE_SOURCE_DIR}/src/string)

macro(add_target_benchmark target)
    string(REPLACE "_benchmark" "" target_name ${target})
    add_executable(${target} "${target}.cpp" "${CMAKE_SOURCE_DIR}/src/string/${target_name}.cpp")
    target_link_libraries(${target} PRIVATE benchmark::benchmark benchmark::benchmark_main ${ARGN})
    target_compile_definitions(${target} PUBLIC -DBENCHMARK_STATIC_DEFINE)
    if(MSVC)
        ### Edit and Continue for CMake projects
        target_compile_options(${target} PUBLIC "/Zi")
        target_link_options(${target} PUBLIC "/INCREMENTAL")
    endif()
endmacro()

add_target_benchmark(convert_string_benchmark)
add_target_benchmark(ip_address_benchmark fmt::fmt)
# add_target_benchmark(knuth_morris_pratt_benchmark)
add_target_benchmark(look_and_say_benchmark)
add_target_benchmark(naive_string_match_benchmark)
add_target_benchmark(palindrome_benchmark)
# add_target_benchmark(print_string_benchmark)
add_target_benchmark(rabin_karp_benchmark)
add_target_benchmark(roman_number_benchmark)
add_target_benchmark(run_length_encoding_benchmark)
# add_target_benchmark(sheet_encoding_benchmark)
