include_directories(${CMAKE_SOURCE_DIR}/src/include)

macro(add_library_target target)
    string(REPLACE ".cpp" "" target_name ${target})
    add_library(${target_name} STATIC ${target})
    target_link_libraries(${target_name} PRIVATE ${ARGN})
endmacro()

add_library_target(advancing_through.cpp)
add_library_target(arbitrary_precision_integer.cpp)
add_library_target(delete_element.cpp)
add_library_target(dutch_national_flag.cpp)
add_library_target(enumerate_prime_number.cpp)
add_library_target(order_element.cpp)
add_library_target(random_data_sampling.cpp)
add_library_target(replace_element.cpp)
add_library_target(stock_trading.cpp)
