include_directories(${CMAKE_SOURCE_DIR}/src/include)
include_directories(${CMAKE_SOURCE_DIR}/src/hashtable)
include_directories(${CMAKE_SOURCE_DIR}/src/tree)

macro(add_library_target target)
    string(REPLACE ".cpp" "" target_name ${target})
    add_library(${target_name} STATIC ${target})
    target_link_libraries(${target_name} PRIVATE ${ARGN})
endmacro()

add_library_target(anonymous_letter.cpp)
add_library_target(check_palindromic_permutation.cpp)
add_library_target(collatz_conjecture.cpp)
add_library_target(find_anagram.cpp)
add_library_target(nearest_repeated_entry.cpp)
add_library_target(optimized_lca.cpp)
add_library_target(smallest_subarray.cpp)
