include_directories(${CMAKE_SOURCE_DIR}/src/include)
include_directories(${CMAKE_SOURCE_DIR}/src/linkedlist)

macro(add_library_target target)
    string(REPLACE ".cpp" "" target_name ${target})
    add_library(${target_name} STATIC ${target})
    target_link_libraries(${target_name} PRIVATE ${ARGN})
endmacro()

add_library_target(delete_list_node.cpp)
add_library_target(list_arithmetic_operation.cpp)
add_library_target(list_cycle.cpp)
add_library_target(list_palindrome.cpp)
add_library_target(merge_list.cpp)
add_library_target(order_list_node.cpp)
# add_library_target(replace_list_node.cpp)
add_library_target(reverse_list.cpp)
add_library_target(shift_list.cpp)
