include_directories(${CMAKE_SOURCE_DIR}/src/include)

macro(add_library_target target)
    string(REPLACE ".cpp" "" target_name ${target})
    add_library(${target_name} STATIC ${target})
    target_link_libraries(${target_name} PRIVATE ${ARGN})
endmacro()

add_library_target(arithmetic_operation.cpp)
add_library_target(compute_parity.cpp)
add_library_target(generate_random_number.cpp)
add_library_target(integer_palindrome.cpp)
add_library_target(power_operation.cpp)
add_library_target(rectangle_intersection.cpp)
add_library_target(reverse_digit.cpp)
add_library_target(swap_bit.cpp)
