include_directories(${CMAKE_SOURCE_DIR}/src/include)

macro(add_library_target target)
	add_library(${target} SHARED "${target}.cpp")
	target_link_libraries(${target} PRIVATE common_util ${ARGN})
	set_property(TARGET ${target} PROPERTY CXX_STANDARD 20)
endmacro()

# add_library_target(binary_exponentation)
# add_library_target(closest_integer)
add_library_target(computing_parity_of_word)
add_library_target(divide_operation)
add_library_target(generate_random_number)
add_library_target(integer_palindrome)
add_library_target(multiply_operation)
add_library_target(power_operation)
add_library_target(rectangle_intersection)
# add_library_target(reverse_bit)
add_library_target(reverse_digit)
add_library_target(swap_bit)
