include_directories(${CMAKE_SOURCE_DIR}/src/include)

macro(add_library_target target)
    add_library(${target} STATIC "${target}.cpp")
    target_link_libraries(${target} PRIVATE ${ARGN})
    set_property(TARGET ${target} PROPERTY CXX_STANDARD 20)
endmacro()

add_library_target(h_index)
add_library_target(insertion_sort)
add_library_target(intersect_two_sorted_array)
add_library_target(merge_interval)
add_library_target(merge_two_sorted_array)
add_library_target(remove_first_name_duplicate)
add_library_target(selection_sort)
add_library_target(union_interval)
