find_package(fmt REQUIRED)

include_directories(${CMAKE_SOURCE_DIR}/src/include)

macro(add_library_target target)
    string(REPLACE ".cpp" "" target_name ${target})
    add_library(${target_name} STATIC ${target})
    target_link_libraries(${target_name} PRIVATE ${ARGN})
endmacro()

add_library_target(convert_string.cpp)
add_library_target(ip_address.cpp fmt::fmt)
# add_library_target(knuth_morris_pratt.cpp)
add_library_target(look_and_say.cpp)
add_library_target(naive_string_match.cpp)
add_library_target(palindrome.cpp)
add_library_target(print_string.cpp)
add_library_target(rabin_karp.cpp)
add_library_target(roman_number.cpp)
add_library_target(run_length_encoding.cpp)
add_library_target(sheet_encoding.cpp)
