include_directories(${CMAKE_SOURCE_DIR}/src/include)
include_directories(${CMAKE_SOURCE_DIR}/src/tree)

macro(add_library_target target)
    string(REPLACE ".cpp" "" target_name ${target})
    add_library(${target_name} STATIC ${target})
    target_link_libraries(${target_name} PRIVATE ${ARGN})
endmacro()

add_library_target(b_tree.cpp)
add_library_target(balanced_tree_status.cpp)
add_library_target(binary_tree_exterior.cpp)
add_library_target(leaf_node_list.cpp)
add_library_target(lowest_common_ancestor.cpp)
add_library_target(right_sibling.cpp)
add_library_target(sum_root_to_leaf.cpp)
add_library_target(tree_symmetric.cpp)
